modify 单例模式的析构问题和线程安全问题 and  fix toc is covered with sidebar problem

--- a/themes/next/source/css/_common/scaffolding/helpers.styl
+++ b/themes/next/source/css/_common/scaffolding/helpers.styl
@@ -95,7 +95,7 @@ input[id$=search-input]:hover {
 
 input[id$=search-input]:focus {
   border-bottom: 1px solid rgb(15, 15, 15)
-  width: 160px;
+  width: 150px;
   +mobile() {
     width: 140px;
   }
